# GitHubRepo

./: .env.example  .flake8  .gitignore  .py  README.md  file1.txt  file2.txt  file3.txt  main.py  pyproject.toml  tatus  файл2.txt
data/: file.csv  operations.json  operations.xlsx  transactions_excel.xlsx  user_settings.json
src/: decorators.py  external_api.py  generators.py  get_date  loadformat.py  mask_account_card.py  masks.py  opros.py  processing.py  regular.py  reports.py  services.py  sort_by_date.py  utils.py  views.py  widget.py
tests/: dummy_path.json  test_cervices.py  test_decorators.py  test_external_api.py  test_generators.py  test_mask.py  test_processing.py  test_reports.py  test_utils.py  test_views.py  test_widget.py
